First prototype of c++ version of rock-display

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,29 @@
 rock_library(rock-display
-    SOURCES Dummy.cpp
-    HEADERS Dummy.hpp)
+SOURCES 
+    TaskModel.cpp
+MOC 
+    TaskModel.hpp
+HEADERS 
+DEPS_PKGCONFIG 
+    orocos_cpp
+    QtCore 
+    QtGui
+)
 
-rock_executable(rock-display_bin Main.cpp
-    DEPS rock-display)
+rock_executable(rock-display_bin Main.cpp TaskModel.cpp
+DEPS
+    rock-display
+MOC TaskModel.hpp
+DEPS_PKGCONFIG 
+    orocos_cpp
+    QtCore 
+    QtGui
+UI
+    task_inspector_window.ui   
+)
+
+rock_executable(list_tasks List.cpp
+DEPS_PKGCONFIG 
+    orocos_cpp
+)
 
