still problems with vizkit plugins.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,17 @@ UI
     task_inspector_window.ui
 )
 
+rock_executable(rock-display_test Test.cpp
+DEPS
+    rock-display
+DEPS_PKGCONFIG
+    orocos_cpp
+    QtCore
+    QtGui
+UI
+    task_inspector_window.ui
+)
+
 rock_executable(list_tasks List.cpp
 DEPS_PKGCONFIG
     orocos_cpp
