add image view of rock_widget_collection to available plugins.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ DEPS_PKGCONFIG
     QtGui
     lib_config
     vizkit3d
+    rock_widget_collection
 )
 
 rock_executable(rock-display_bin Main.cpp
@@ -31,9 +32,4 @@ DEPS_PKGCONFIG
     QtGui
 UI
     task_inspector_window.ui
-)
-
-rock_executable(list_tasks List.cpp
-DEPS_PKGCONFIG
-    orocos_cpp
 )
