remove unnecessary typelib value convert when output port is visualized.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,8 @@ DEPS_PKGCONFIG
     vizkit3d
     rock_widget_collection
     base-lib
+    envire_core
+    envire_maps
 )
 add_definitions(-DBASE_LOG_DEBUG)
 
