Add ability to edit properties

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ SOURCES
     NameServiceItemDelegate.cpp
     ConfigItemHandler.cpp
     PortItem.cpp
+    PropertyItem.cpp
     TaskItem.cpp
     TypedItem.cpp
     Mainwindow.cpp
