Split PluginHandle, VizHandle into their own header

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,8 @@ MOC
     Mainwindow.hpp
     Types.hpp
     VisualizerAdapter.hpp
+    VizHandle.hpp
+    PluginHandle.hpp
     configitemhandlers/EnumHandler.hpp
     configitemhandlers/ContainerHandler.hpp
     configitemhandlers/StdStringHandler.hpp
