Use the NOCURDIR feature of rock
Does not change anything for us, except show where we forgot things
in libraries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ cmake_minimum_required(VERSION 3.0)
 project(rock-display VERSION 0.1 DESCRIPTION "An application to show all tasks")
 find_package(Rock)
 rock_init()
+rock_feature(NOCURDIR)
 rock_standard_layout()
